--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -177,7 +177,7 @@
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
-  width: 28rem;
+  /* width: 28rem; */
 }
 
 .inputSave,
